--- a/modules/ROOT/pages/prerequisites/index.adoc
+++ b/modules/ROOT/pages/prerequisites/index.adoc
@@ -25,14 +25,13 @@ The minimum hardware requirements depend on the usage scenario you have in mind 
 
 * For simple testing purposes, you can even use a laptop or Raspberry Pi 4 (ARM64) with a minimum of 512MB of RAM.
 * For more intense testing purposes, the recommended start hardware is a multi-core processor with at least 4GB of RAM.
-* For productive environments, RAM and bandwidth are the main limiting factors, see xref:ram-considerations[RAM Considerations] and xref:bandwidth-considerations[Bandwidth Considerations].
+* For productive environments, CPU and RAM are the main limiting factors. A clear guideline for CPU's cant be given at the moment as there are too many influencing factors. See xref:ram-considerations[RAM Considerations] for memory related factors.
 
 // fixme: info of architectures came from willy, also see: 
 // https://download.owncloud.com/ocis/ocis/1.18.0/
 // https://hub.docker.com/r/owncloud/ocis/tags
 
-[caption=]
-.Tested and Supported Hardware Architecture Matrix
+See the following table for a tested and supported hardware architecture matrix::
 [width="65%",cols="50%,50%",options="header"]
 |===
 | OS / Docker
@@ -52,7 +51,7 @@ The minimum hardware requirements depend on the usage scenario you have in mind 
 M1 (ARM64 compatible)
 |===
 
-Note when referencing software built for a particular architecture, *ARM* stands for ARM32(v6/v7) and *ARM64* stands for ARM64(v8).
+Note when referencing software builds for a particular architecture, *ARM* stands for ARM32(v6/v7) and *ARM64* stands for ARM64(v8).
 
 === RAM Considerations
 
